update portfolio and footer on all htmls

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <!-- Bootstrap CDN -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link href="sticky-footer.css" rel="stylesheet">
   <meta name="viewport" content= "width-device-width, initial-scale=1">
 </head>
 
@@ -69,6 +70,11 @@
       </div>
     </div>
   </div>
+ <footer class="page-footer font-small #2C179C">
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://www.google.com/"> Google.com</a>
+  </div>
+</footer>
 
   
 </body>
