update contact button

--- a/contact.html
+++ b/contact.html
@@ -45,32 +45,40 @@
         </div>
 
 
-<div class="input-group mb-3">
-    <div class="input-group-prepend">
-    <span class="input-group-text" id="basic-addon1">Given Name</span>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-addon1">Given Name</span>
+          </div>
+          <input type="text" class="form-control" placeholder="Enter name" aria-label="Enter name" aria-describedby="basic-addon1">
+        </div>
+          
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text">Email Address</span>
+          </div>
+          <input type="text" class="form-control" placeholder="Enter email address" aria-label=" Enter email address" aria-describedby="basic-addon1">
+        </div>
+
+        <div class="form-group">
+          <label for="Message">Message:</label>
+          <textarea class="form-control" rows="10 " id="message"></textarea>
+        </div>
+
+        <div class="row">
+          <div class="col-md-12">
+            <button type="button" class="btn btn-info">Submit</button>
+          </div> 
+        </div>
+
+      </div>
     </div>
-    <input type="text" class="form-control" placeholder="Enter name" aria-label="Enter name" aria-describedby="basic-addon1">
-</div>
-  
-  <div class="input-group mb-3">
-    <div class="input-group-prepend">
-      <span class="input-group-text">Email Address</span>
-    </div>
-    <input type="text" class="form-control" placeholder="Enter email address" aria-label=" Enter email address" aria-describedby="basic-addon1">
   </div>
 
-  <div class="form-group">
-    <label for="Message">Message:</label>
-    <textarea class="form-control" rows="10 " id="message"></textarea>
-  </div>
+  <footer class="page-footer font-small #2C179C">
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://www.google.com/"> Google.com</a>
+    </div>  
+  </footer>
 
-  <div class="row">
-    <div class="col-md-12">
-        <button type="button" class="btn btn-primary">Submit</button>
-    </div> 
-  </div>
-    </div>
-  </div>
-</div>
 </body>
 </html>
