--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,10 @@
 
   <!-- Bootstrap CDN -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <meta name="viewport" content= "width-device-width, initial-scale=1">
 </head>
 
 <body>
-  <!-- Start Nav -->
+  <!-- Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-#2C179C" style="background-color: #2C179C;">
     <span class="navbar-brand mb-1 h1">Ziyen's WebDev</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -35,8 +34,8 @@
       </ul>
     </div>
   </nav>
-  <!-- End Nav -->
-
+    
+  <!-- Main -->
   <div class="container">
     <div class="row">
       <div class="col-md-12">
