final checks and clean html

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,32 +11,32 @@
   <!-- Bootstrap CDN -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link href="sticky-footer.css" rel="stylesheet">
-  <meta name="viewport" content= "width-device-width, initial-scale=1">
-</head>
+  </head>
 
 <body>
-  <!-- Start Nav -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-#2C179C" style="background-color: #2C179C;">
-    <span class="navbar-brand mb-1 h1">Ziyen's WebDev</span>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <!-- End Nav -->
+    <!-- Nav -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-#2C179C" style="background-color: #2C179C;">
+        <span class="navbar-brand mb-1 h1">Ziyen's WebDev</span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="nav navbar-nav navbar-right">
+            <li class="nav-item">
+            <a class="nav-link" href="index.html">About</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+        </ul>
+        </div>
+    </nav>
+  
+    <!-- Main -->
     <div class="container">
         <div class="row">
         <div class="col-md-12">
@@ -75,13 +75,14 @@
             </div>
         </div>
     </div>
-     
-
+ 
+    <!-- Footer -->
     <footer class="page-footer font-small #2C179C">
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
-        <a href="https://www.google.com/"> Google.com</a>
-        </div>  
+            <a href="https://www.google.com/"> Google.com</a>
+        </div>
     </footer>
+    
 </body>
 
 </html>
